FIX: Made invisible Cloxe-X visible in Edit Task and activated hover effect.  Shortened code for class .close in Show Task.

--- a/src/app/login/main-page/board/task-preview/dialog-show-edit-task/dialog-edit-task.scss
+++ b/src/app/login/main-page/board/task-preview/dialog-show-edit-task/dialog-edit-task.scss
@@ -36,6 +36,14 @@
     align-self: flex-end;
   }
 
+  .close {
+    color: colors.$buttonGrey;
+    &:hover {
+      display: block;
+      background-color: #d9d9d9;
+    }
+  }
+
   .area_input {
     display: flex;
     flex-direction: column;
